# bac_hunter

./: .bac-hunter.yml  .gitignore  .ruff.toml  .todo  BAC_HUNTER_FIXES_REPORT.md  COMPREHENSIVE_FIXES_REPORT.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  SESSION_HANDLING_FIXES.md  SESSION_PERSISTENCE_IMPROVEMENTS.md  SYSTEM_ANALYSIS_REPORT.md  TRANSFORMATION_COMPLETE.md  __init__.py  __main__.py  auth_data.json  bac_hunter.db  cli.py  config.py  conftest.py  demo_ai_enhancements.py  demo_bac_hunter.py  demo_enhanced_features.py  example_integration.py  http_client.py  identities.sample.yaml  identities.yaml  logging_setup.py  modes.py  pyproject.toml  quick_start.sh  rate_limiter.py  requirements-dev.txt  requirements-fixed.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  (+13 more)
access/: __init__.py  differential.py  force_browse.py  har_replay.py  idor_probe.py  mutator.py
advanced/: __init__.py  auth_analyzer.py  endpoint_fuzzer.py  parameter_miner.py  response_analyzer.py
audit/: __init__.py  header_inspector.py  param_toggle.py
bac_hunter/: __init__.py  __main__.py  auth_store.py  cli.py  config.py  http_client.py  logging_setup.py  modes.py  rate_limiter.py  session_manager.py  storage.py  storage_enterprise.py  user_guidance.py  utils.py
bac_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CLI_ANALYSIS.md  overview.md
exploitation/: __init__.py  data_exposure.py  privilege_escalation.py  safe_exploit.py
fallback/: __init__.py  param_scanner.py  path_scanner.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
integrations/: __init__.py  dirsearch_wrapper.py  external_tools.py  nuclei_integration.py  pd_httpx_wrapper.py  subfinder_wrapper.py
intelligence/: __init__.py  auth_engine.py
monitoring/: __init__.py  progress_tracker.py
notifications/: __init__.py  alerter.py
orchestrator/: __init__.py  jobs.py  worker.py
plugins/: __init__.py  base.py
(+249 files in other folders)
