[project]
name = "bac-hunter"
version = "2.0.0"
description = "BAC Hunter security testing tool"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "httpx==0.27.0",
  "typer==0.12.3",
  "click==8.1.7",
  "PyYAML==6.0.1",
  "rich==13.7.1",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "Jinja2==3.1.4",
  "weasyprint==62.3"
]

[project.scripts]
bac-hunter = "bac_hunter.cli:app"

[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"
