[project]
name = "bac-hunter"
version = "2.0.0"
description = "BAC Hunter security testing tool"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "httpx==0.27.0",
  "typer==0.12.3",
  "click==8.1.7",
  "PyYAML==6.0.1",
  "rich==13.7.1",
  "Jinja2==3.1.4"
]

[project.optional-dependencies]
web = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6"
]
report = [
  "weasyprint==62.3"
]
ai = [
  "numpy==1.26.4",
  "scikit-learn==1.5.2",
  "tensorflow-cpu==2.20.0",
  "nltk==3.9.1"
]
browser = [
  "selenium==4.23.1",
  "playwright==1.47.0"
]

[project.scripts]
bac-hunter = "bac_hunter.cli:app"

[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bac_hunter*"]
exclude = ["tests*"]
